package edu.masanz.da.pk3.game;

import edu.masanz.da.pk3.util.Rect;

import static edu.masanz.da.pk3.game.AppConsts.*;

public class GameArea {

    public static final Rect rect  = new Rect(0, HUD_HEIGHT, BOARD_WIDTH, BOARD_HEIGHT + HUD_HEIGHT);

}

